Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Wiki_Editing_Guidelines%2Fru.mw
+++ b/Openmoko_Wiki_Editing_Guidelines%2Fru.mw
@@ -1,11 +1,11 @@
-Руководство по редактированию OpenMoko-Вики призвано помочь нашим пользователям в редактировании этой вики. В какой-то степени оно стремится гарантировать более упорядоченную и организованную структуру энциклопедии.
+Руководство по редактированию Openmoko-Вики призвано помочь нашим пользователям в редактировании этой вики. В какой-то степени оно стремится гарантировать более упорядоченную и организованную структуру энциклопедии.
 == Терминология ==
-#OpenMoko - применим только к программному обеспечению (считайте, что OpenMoko - дистрибутив GNU/Linux).
-#Neo 1973 - первое устройство, на котором официально работает OpenMoko.
+#Openmoko - применим только к программному обеспечению (считайте, что Openmoko - дистрибутив GNU/Linux).
+#Neo 1973 - первое устройство, на котором официально работает Openmoko.
 #Используйте термин "Смартфон" когда ссылаетесь на устройство, которым может быть Neo 1973 или его более поздняя версия.
 
 ==Правила==
-#Если Вы добавляете информацию (особенно это касается новых страниц) о железе, имейте ввиду, что Neo 1973 - это одно из многих устройств, на которых работает OpenMoko. Таким образом:
+#Если Вы добавляете информацию (особенно это касается новых страниц) о железе, имейте ввиду, что Neo 1973 - это одно из многих устройств, на которых работает Openmoko. Таким образом:
 ##Не создавайте страницы с общими названиями, такими как "Батарея", вместо этого используйте "Батарея Neo 1973"
 ##Если все-таки имеется необходимость создать страницу с общим названием, используйте отдельные секции для каждого устройства и убедитесь, что вы всегда ссылаетесь на секцию Neo 1973 с других, специфичных для Neo 1973, страниц
 #Эта Вики прежде всего предназначена для хранения актуальной информации по настоящим программным и аппаратным проектам, хотя некоторые части ее, возможно, все еще находятся в разработке. Таким образом:
@@ -25,7 +25,7 @@
 
 Для более подробной справки по категориям посетите [http://www.mediawiki.org/wiki/Help:Categories Страницу помощи "Категории" на MediaWiki.]
 
-{{Languages|OpenMoko_Wiki_Editing_Guidelines}}
+{{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
 [[Category:Help]]
 [[Category:Information| ]]
