Replacing 'OpenMoko' with 'Openmoko'

--- a/Other_OSes.mw
+++ b/Other_OSes.mw
@@ -1,6 +1,6 @@
-There are two areas in which other OSes can take a part in [[OpenMoko]].
+There are two areas in which other OSes can take a part in [[Openmoko]].
 First, not everybody will use Linux on the computer to access their phones (including download and develop software); we call this the ''host OS''.
-Second, some people may wish to run some other software than OpenMoko on their devices, and especially other Linux distributions should be viable.
+Second, some people may wish to run some other software than Openmoko on their devices, and especially other Linux distributions should be viable.
 
 == Alternative host OS ==
 
@@ -15,21 +15,21 @@ Covered elsewhere; see [[MacOS_X]]. They have dfu-util and ether-gadget working.
 
 === FreeBSD ===
 
-qemu-neo1973 works see [[Talk:OpenMoko_under_QEMU#FreeBSD_and_last_qemu...]]. Nothing else known. See [[FreeBSD]]
+qemu-neo1973 works see [[Talk:Openmoko_under_QEMU#FreeBSD_and_last_qemu...]]. Nothing else known. See [[FreeBSD]]
 
 === NetBSD ===
 
-We have an experimental [[NetBSD|NetBSD/evbarm Neo1973 kernel]] booting on [[Talk:OpenMoko under QEMU#NetBSD.2Fi386|Qemu Neo1973 emulator on NetBSD]].
+We have an experimental [[NetBSD|NetBSD/evbarm Neo1973 kernel]] booting on [[Talk:Openmoko under QEMU#NetBSD.2Fi386|Qemu Neo1973 emulator on NetBSD]].
 
 === OpenBSD ===
 
-The umodem(4) driver works with the u-boot console. When the umodem driver claims device 0x1457:0x5118, it becomes inaccessible to libusb-based applications such as dfu-util. The cdce(4) driver works "out of the box" with OpenMoko's ethergadget interface, so you can ssh in, run remote X clients, scp in or out, etc.
+The umodem(4) driver works with the u-boot console. When the umodem driver claims device 0x1457:0x5118, it becomes inaccessible to libusb-based applications such as dfu-util. The cdce(4) driver works "out of the box" with Openmoko's ethergadget interface, so you can ssh in, run remote X clients, scp in or out, etc.
 
 [[User:Idarwin|Ian Darwin]] has a port of dfu-util partly working (list works but not download).
 
 == Alternative software for the Neo1973 phone ==
 
-The OpenMoko project has invested a lot of time & energy in making the OpenMoko software stack work nicely on the Neo1973 phone. But it is your phone and, unlike most providers, we will not stop you from running whatever you like on the "bare metal" of the phone itself. And some people are never satisfied with a device until they've flashed the firmware multiple times. Here are some alternatives.
+The Openmoko project has invested a lot of time & energy in making the Openmoko software stack work nicely on the Neo1973 phone. But it is your phone and, unlike most providers, we will not stop you from running whatever you like on the "bare metal" of the phone itself. And some people are never satisfied with a device until they've flashed the firmware multiple times. Here are some alternatives.
 
 === Other Linux distributions ===
 
@@ -54,7 +54,7 @@ e.g. OpenBSD or maybe [[FreeBSD]] or [[NetBSD]]?
 You can write your own OS by running your own code on the [[bare metal]].
 
 == See also ==
-* [[OpenMoko-supported hardware]]
+* [[Openmoko-supported hardware]]
 
 [[Category:Technical]]
 [[Category:Software (non openmoko)]]
