--- a/Other_Resources.mw
+++ b/Other_Resources.mw
@@ -13,7 +13,7 @@ New to linux, check out these sites to get started
 *Looking to ask a question on the mailing list, read [http://catb.org/~esr/faqs/smart-questions.html this] first!
 == General ==
 
-* [http://www.google.com/trends?q=openmoko%2Cneo1973&ctab=1&geo=all&date=all  OpenMoko and Neo1973 on google trends.]
-* [http://openmoko.togaware.com Togaware] The OpenMoko and Neo1973 Desktop Survival Guide is a freely available guide to the Neo1973.
+* [http://www.google.com/trends?q=openmoko%2Cneo1973&ctab=1&geo=all&date=all  Openmoko and Neo1973 on google trends.]
+* [http://openmoko.togaware.com Togaware] The Openmoko and Neo1973 Desktop Survival Guide is a freely available guide to the Neo1973.
 
 [[Category:Information]]
