Replacing 'OpenMoko' with 'Openmoko'

--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -15,7 +15,7 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * I want to type the first few numbers of a phone number and be presented a list of matching contacts.
 ** I'd rather take a person, choose home/work, choose land-line/mobile and not bother with numbers anymore. Useful when I'm on my way to meet that person, or the person has his/her birthday, i.e. the person is already listed on my screen!
 * I want to add a contact to multiple groups (AKA: categories)
-* I want to be able to send my contact info to other OpenMoko devices over bluetooth
+* I want to be able to send my contact info to other Openmoko devices over bluetooth
 * I want to be able to two-way sync all calendar, contacts (and tasks) with a GroupDAV server (e.g. Citadel) over-the-air
 
 == Constraints ==
@@ -33,7 +33,7 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * Synchronizing w/ Google services
 
 Possible solutions:
-* mokod - An OpenMoko daemon to run on host operating systems
+* mokod - An Openmoko daemon to run on host operating systems
 * [http://www.estamos.de/projects/SyncML/ Syncevolution] can sync with [http://www.scheduleworld.com/ Scheduleworld] which can sync with Google, and other programs.
 
 == Questions and Answers ==
