Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_1973_Partitions.mw
+++ b/Neo_1973_Partitions.mw
@@ -22,7 +22,7 @@ The internal [[NAND Flash|flash memory]] is divided into partitions of several u
 
 <pre>
 memento:~# dfu-util -l
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Found DFU: [0x1457:0x5119] devnum=9, cfg=0, intf=0, alt=0, name="RAM 0x32000000"
