--- a/Pppd.mw
+++ b/Pppd.mw
@@ -4,23 +4,23 @@
 
 ''See [[manually using GPRS]].''
 
-The main scenario on [[OpenMoko]] is the cellar [[GPRS]] connection for internet access.
+The main scenario on [[Openmoko]] is the cellar [[GPRS]] connection for internet access.
 
 == Bluetooth DUN ==
 
 ''See [[manually using Bluetooth]].''
 
-Another feature that requires PPP is accessing an OpenMoko device over [[Bluetooth]] within the DUN ("dial-up networking") profile.
+Another feature that requires PPP is accessing an Openmoko device over [[Bluetooth]] within the DUN ("dial-up networking") profile.
 
 == Remote pppd ==
 
-The GSM modem of an OpenMoko device can be made available for a computer connected via [[USB]] or [[Bluetooth]], using a serial device, SSH, or a TCP port. In this case, pppd run on the computer can establish a GPRS connection.
+The GSM modem of an Openmoko device can be made available for a computer connected via [[USB]] or [[Bluetooth]], using a serial device, SSH, or a TCP port. In this case, pppd run on the computer can establish a GPRS connection.
 
 == QEMU ==
 
 ''See [[QEMU#Simple network connection with pppd]].''
 
-If instead of a real OpenMoko device QEMU is used to emulate one, it can be networked with the host computer via an emulated serial port.
+If instead of a real Openmoko device QEMU is used to emulate one, it can be networked with the host computer via an emulated serial port.
 
 == VPN ==
 
