Replacing 'OpenMoko' with 'Openmoko'

--- a/Backup.mw
+++ b/Backup.mw
@@ -45,7 +45,7 @@ Here is what a successful dfu-util backup run looks like:
 on the host PC:
 <pre>
 $ sudo ./dfu-util -a kernel -R -U good-kernel.img
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Opening USB Device 0x0000:0x0000...
@@ -72,7 +72,7 @@ Starting DFU Upload of partition 'kernel'
 
 A failed run of dfu-util looks like this:
 
- dfu-util - (C) 2007 by OpenMoko Inc.
+ dfu-util - (C) 2007 by Openmoko Inc.
  This program is Free Software and has ABSOLUTELY NO WARRANTY
  
  Opening USB Device 0x0000:0x0000...
