Replacing 'OpenMoko' with 'Openmoko'

--- a/Prototypes.mw
+++ b/Prototypes.mw
@@ -1,4 +1,4 @@
-Prototypes are pieces of hardware such as boards, fully assembled devices, batteries, accessories that OpenMoko uses during the development of new hardware.
+Prototypes are pieces of hardware such as boards, fully assembled devices, batteries, accessories that Openmoko uses during the development of new hardware.
 
 This page tracks such prototypes, in which condition their life started, and what happened to them during their lifetime.
 
