--- a/Python.mw
+++ b/Python.mw
@@ -18,7 +18,7 @@ GTK applications need the following binary packages too:
 
 === Missing ===
 
-Parts of the OpenMoko platform are not available in python yet, including gconf and evolution data server. python-openmoko is in the works for [[gsmd]] access etc. A recipe for PyWebKitGtk
+Parts of the Openmoko platform are not available in python yet, including gconf and evolution data server. python-openmoko is in the works for [[gsmd]] access etc. A recipe for PyWebKitGtk
 is at [http://bugs.openembedded.org/show_bug.cgi?id=3028 OpenEmbedded bug #3028].
 
 == See also ==
