--- a/QEMU_command_line.mw
+++ b/QEMU_command_line.mw
@@ -11,6 +11,6 @@ For instance, here is a target which opens the local connection to the virtual p
  	 	-sd openmoko/openmoko-sd.image \
  	 	-kernel openmoko/openmoko-kernel.bin )
 
-(the executable is highlighted in blue). After typing make run-qemu-vnc you can open ssh and scp connections to the emulated phone, as described in [[OpenMoko under QEMU#Simple network connection with pppd|QEMU manual]].
+(the executable is highlighted in blue). After typing make run-qemu-vnc you can open ssh and scp connections to the emulated phone, as described in [[Openmoko under QEMU#Simple network connection with pppd|QEMU manual]].
 
 [[Category:Emulation]]
