--- a/Qtopia_on_Neo1973.mw
+++ b/Qtopia_on_Neo1973.mw
@@ -122,7 +122,7 @@ Now, from the computer prompt, execute the following:
 which should get you the following, and it should only take a few
 seconds to finish:
 
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
    Opening USB Device 0x0000:0x0000...
@@ -151,7 +151,7 @@ After that, execute the following:
 which should get you the following, and it should take between 5-10min
 to finish:
 
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
   Opening USB Device 0x0000:0x0000...
@@ -247,7 +247,7 @@ Suspend support is very flaky.  The neo often shuts off from a suspend state.  I
 
 When using the "Predictive keyboard," do a quick flick up or down over the keyboard to access numbers/symbols/capitals. In snapshot builds, you can select virtual keyboard by tapping on the little arrow icon to the left of the battery status icon.
 
-In summary, Qtopia on the Neo1973 is much closer to being ready than OpenMoko as of this writing.  However, sound and suspend support prevent it from being at all useful as a cell phone (as a landline that doesn't ring but instead vibrates, it works ok).
+In summary, Qtopia on the Neo1973 is much closer to being ready than Openmoko as of this writing.  However, sound and suspend support prevent it from being at all useful as a cell phone (as a landline that doesn't ring but instead vibrates, it works ok).
 
 The [http://www.qtopia.net/modules/newbb_plus/viewtopic.php?topic_id=473&forum=4 Qtopia forum area on the FIC GTA01] might be helpful, but it is preferred that you update this section with issues and fixes you find.
 
