Replacing 'OpenMoko' with 'Openmoko'

--- a/Qtopia_on_Neo_1973%2Fde.mw
+++ b/Qtopia_on_Neo_1973%2Fde.mw
@@ -32,7 +32,7 @@ Dieser Bug scheint noch nicht im letzten offiziellen Flash-Image behoben zu sein
 == Installation ==
 
 === Qtopia Images ===
-Qtopia Images für das Neo1973 und der Kernel können [http://www.qtopia.net/modules/devices/openmoko.php hier] heruntergeladen werden. Zur Zeit enthält das Archiv den OpenMoko Kernel 2.6.22 und ein Flash Image der Qtopia Phone-Edition im jffs2 Format, das für das Neo1973 cross-compiliert wurde.
+Qtopia Images für das Neo1973 und der Kernel können [http://www.qtopia.net/modules/devices/openmoko.php hier] heruntergeladen werden. Zur Zeit enthält das Archiv den Openmoko Kernel 2.6.22 und ein Flash Image der Qtopia Phone-Edition im jffs2 Format, das für das Neo1973 cross-compiliert wurde.
 
 Neuere inoffizielle Qtopia Images können sie finden in den ScaredyCat [[repositories]].
 
@@ -43,10 +43,10 @@ Es ist empfehlenswert, zuerst Teile des Flash Speichers zu löschen (wenn Sie ke
 
 Der Download und die Nutzung von dfu-utils erfolgt [[Flashing_openmoko|wie üblich]]. Die IP Adresse ist die gleiche wie beim OopenMoko Build (192.168.0.202/24).
 
-=== Qtopia UND OpenMoko Variante 1 ===
+=== Qtopia UND Openmoko Variante 1 ===
 Warum wählen, wenn man beides haben kann ;-)
 
-Hier wird angenommen, dass auf dem Neo 1973 irgendeine aktuelle Version von OpenMoko installiert ist. Wenn nicht, dann bitte  [[Flashing_openmoko|hier]] einen Blick rein werfen.
+Hier wird angenommen, dass auf dem Neo 1973 irgendeine aktuelle Version von Openmoko installiert ist. Wenn nicht, dann bitte  [[Flashing_openmoko|hier]] einen Blick rein werfen.
 
 Sichern Sie zuerst alle Daten von der Micro-SD Karte, die nicht gelöscht werden sollen, wärend ein neues Dateisystem auf der SD Karte angelegt wird. Ein neues Dateisystem ist erforderlich, da VFAT keine Links unterstützt. Also nach dem SSH auf Neo:
  umount /dev/mmcblk0p1
@@ -73,7 +73,7 @@ Jetzt beenden sie den XServer und den gsmd und starten Sie Qtopia (dies kann zur
 
 Und weiter? Sie können den letzten Schritt in einem Script zusammenfassen und diesen dann vom Terminal auf dem Neo starten. Allerdings ist es schöner, die Wahl zwischen beiden GUI´s zur init Zeit einzurichten. Für Qtopia wäre eine Anwendung hilfreich, die das Umschalten vereinfachen kann.
 
-=== Qtopia UND OpenMoko Variante 2 ===
+=== Qtopia UND Openmoko Variante 2 ===
 
 * formatieren Sie die SD Karte mit dem ext3 Dateisystem und mounten Sie diese (vergleiche oben)
 * entpacken Sie das rootfs von qtopia-4.3.0-preview-neo-flash.tgz in die SD Karte (vergleiche oben)
@@ -95,7 +95,7 @@ Unterstützung für die Suspend Funktion ist sehr instabil. Neo fährt oft im Su
 
 Beim Nutzen der virtuellen Tastatur leicht und schnell hoch oder runter über der tastatur tippen, um Zahlen/Symbole/Sonderzeichen zu erreichen.
 
-Zusammenfassend ist Qtopia auf dem Neo1973 näher an der Fertigstellung als OpenMoko. (im Moment - 14.10.2007) Allerdings, behindern Sound und sperrliche Suspend Unterstützung den Einsatz von Neo als ein nützliches mobiles Gerät im Vergleich zu einem normalen Handy/PDA.
+Zusammenfassend ist Qtopia auf dem Neo1973 näher an der Fertigstellung als Openmoko. (im Moment - 14.10.2007) Allerdings, behindern Sound und sperrliche Suspend Unterstützung den Einsatz von Neo als ein nützliches mobiles Gerät im Vergleich zu einem normalen Handy/PDA.
 
 == Screenshots ==
 
