Replacing 'OpenMoko' with 'Openmoko'

--- a/Ringtones.mw
+++ b/Ringtones.mw
@@ -5,7 +5,7 @@ Currently we are working towards the phase 2 release of the [[Neo1973 Hardware |
 
 Ringtones should be in OGG/Vorbis format (or converted to it), and licensed in a way that allows free redistribution, such as creative commons by, by-nd, by-sa, gpl, public domain, etc ().
 
-Unless a different license type is required for OpenMoko all files are released under the CreativeCommons Attribution-ShareAlike 3.0	license.
+Unless a different license type is required for Openmoko all files are released under the CreativeCommons Attribution-ShareAlike 3.0	license.
 
 == Tools ==
 
@@ -55,7 +55,7 @@ Changes:
 
 Additions:
 
-	-Startup will have a voice saying "Welcome to OpenMoko" mixed into it.
+	-Startup will have a voice saying "Welcome to Openmoko" mixed into it.
 	-Themes of matching tones for sms, notify, error, ringtone, etc.
 	-More sounds. :-)
 
