Replacing 'OpenMoko' with 'Openmoko'

--- a/Running_Openmoko_on_PC.mw
+++ b/Running_Openmoko_on_PC.mw
@@ -8,7 +8,7 @@ QEmu is full scale emulator which emulates Openmoko hardware, including ARM CPU.
 
 == Running applications natively ==
 
-You can run OpenMoko "as is" on your X desktop. Since OpenMoko applications are GTK based, they can appear like any other application windows on your desktop. Or you might want to run them inside a nested X server (see also [[Xephyr]]), which gives you the ability to emulate OpenMoko screen resolution as well.
+You can run Openmoko "as is" on your X desktop. Since Openmoko applications are GTK based, they can appear like any other application windows on your desktop. Or you might want to run them inside a nested X server (see also [[Xephyr]]), which gives you the ability to emulate Openmoko screen resolution as well.
 
 This is recommended option if your applications don't need access to actual hardware, but can accept dummy input data e.g. constant power meter value. There is no performance penalty, which might be actually a bad thing, since there is a great different between PC and Neo1973 power. Also, compiling for x86 targets seems to be a bit faster.
 
@@ -17,7 +17,7 @@ For debug purposes, it may be convenient to run the application inside the mobil
 
 All you need is to ssh into the mobile phone using -X as an option:
   ssh -X root@192.168.0.202
-After that, you can start from console any OpenMoko application (try to type  openmoko-calculator in the opened shell). This way you can debug taking the real execution speed into consideration and also access devices like GPS that are not present on a desktop PC.
+After that, you can start from console any Openmoko application (try to type  openmoko-calculator in the opened shell). This way you can debug taking the real execution speed into consideration and also access devices like GPS that are not present on a desktop PC.
  
 
 * [[Getting Openmoko working on host with Xephyr]]
