--- a/Running_Openmoko_on_PC%2Fit.mw
+++ b/Running_Openmoko_on_PC%2Fit.mw
@@ -1,12 +1,12 @@
-Grazie alla portabilità di Linux, OpenMoko può funzionare facilmente sul PC, non è necessario alcun hardware particolare.
+Grazie alla portabilità di Linux, Openmoko può funzionare facilmente sul PC, non è necessario alcun hardware particolare.
 
 == Utilizzare QEmu ==
-QEmu è un emulatore in grado di emulare l'hardware di OpenMoko, compresa la CPU ARM. Permette di avere a disposizione componenti hardware emulati che rispecchiano quelli reali. L'emulazione di CPU non native, come ARM, su x86/x64 comporta una notevole perdita in prestazioni. Inoltre, l'installazione dell'ambiente di sviluppo su ARM potrebbe essere complicata.
+QEmu è un emulatore in grado di emulare l'hardware di Openmoko, compresa la CPU ARM. Permette di avere a disposizione componenti hardware emulati che rispecchiano quelli reali. L'emulazione di CPU non native, come ARM, su x86/x64 comporta una notevole perdita in prestazioni. Inoltre, l'installazione dell'ambiente di sviluppo su ARM potrebbe essere complicata.
 
 * [[Openmoko under QEMU/it|Openmoko sotto QEMU]]
 
 == Esecuzione nativa di applicazioni ==
-È possibile eseguire OpenMoko direttamente nell'ambiente grafico. Dato che le applicazioni OpenMoko sono basate su GTK, possono essere visualizzate come qualsiasi altra applicazione grafica del proprio desktop, oppure possono essere eseguite all'interno di server X annidati, in modo da poter emulare la risoluzione dello schermo di OpenMoko.
+È possibile eseguire Openmoko direttamente nell'ambiente grafico. Dato che le applicazioni Openmoko sono basate su GTK, possono essere visualizzate come qualsiasi altra applicazione grafica del proprio desktop, oppure possono essere eseguite all'interno di server X annidati, in modo da poter emulare la risoluzione dello schermo di Openmoko.
 
 Questa è la soluzione raccomandata se le applicazioni non necessitano di interagire con hardware reale ma possono accontentandosi di input fasulli, come valori costanti di potenza. Non c'è grossa variazione nelle prestazioni, anche se sarebbe lecito aspettarselo, data la grande differenza di potenza tra un PC e Neo1973. La compilazione per x86 sembra più veloce.
 
