Replacing 'OpenMoko' with 'Openmoko'

--- a/Screen_Shots.mw
+++ b/Screen_Shots.mw
@@ -2,7 +2,7 @@
 
 __TOC__
 
-= OpenMoko 2007.2 update =
+= Openmoko 2007.2 update =
 Press and hold power button, choose Screenshot from menu :)
 
 =Screen Grab, Screen Snapshot=
