--- a/SettingsGUI%2Fde.mw
+++ b/SettingsGUI%2Fde.mw
@@ -8,7 +8,7 @@
 
 
 == Overview ==
-Until [[OpenMoko/de]] releases an official GUI-Tool to change settings, SettingsGUI allows you to set various settings of the [[gta01]].
+Until [[Openmoko/de]] releases an official GUI-Tool to change settings, SettingsGUI allows you to set various settings of the [[gta01]].
 
 This program is written in [[Python/de]] using pygtk. It can be used only if those are present in your environment (see [[SettingsGUI/de#Environment]]).
 
@@ -35,7 +35,7 @@ This program is written in [[Python/de]] using pygtk. It can be used only if tho
 
 * If you manually register to the gsm network (by toggeling the "Register" checkbox) SettingsGUI will sometimes not notice when the connection is established. Just toggle the init checkbox after about 3 seconds. (this seems to be due to a bug in gsmd...)
 
-{{note|From Version 0.7 the atcmd mode of libgsmd-tool is used. To use it revision 2957 (2007-09-12) or later of gsmd is needed. If you have an older version of gsmd - or an older OpenMoko image - use the upgrade function of [[Package management/de]], install a newer jffs2 image or use version 0.6 of SettingsGUI.}}
+{{note|From Version 0.7 the atcmd mode of libgsmd-tool is used. To use it revision 2957 (2007-09-12) or later of gsmd is needed. If you have an older version of gsmd - or an older Openmoko image - use the upgrade function of [[Package management/de]], install a newer jffs2 image or use version 0.6 of SettingsGUI.}}
 
 * When the GPRS connection is still active ([[pppd]] running on the system) you should close the connection as gsmd can't start up while pppd is using the modem connection - chose "Yes" in the dialog:
 
@@ -168,8 +168,8 @@ SettingsGUI is not yet supporting the new framework-stack, so you'll have to use
 
 * insert 
 
- src/gz aiurlano-armv4t http://aiurlano.netsons.org/OpenMoko/ipk/armv4t
- src/gz aiurlano-all http://aiurlano.netsons.org/OpenMoko/ipk/all
+ src/gz aiurlano-armv4t http://aiurlano.netsons.org/Openmoko/ipk/armv4t
+ src/gz aiurlano-all http://aiurlano.netsons.org/Openmoko/ipk/all
 
 * update your db
 
