Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_supported_devices.mw
+++ b/Openmoko_supported_devices.mw
@@ -12,7 +12,7 @@
 
 * Motorola A780 [http://www.vanille-media.de/images/openmoko-on-a780.jpg OM2007.2]
 
-* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 OpenMoko 2007.2]
+* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 Openmoko 2007.2]
 
 * [http://en.wikipedia.org/wiki/HTC_Universal HTC Universal] dialer works [http://linuxtogo.org/~htcpxa/htcuniversal/index.html code:linuxtogo] [http://www.handhelds.org/moin/moin.cgi/UniversalStatus status:handhelds.org]
 
