--- a/Openmoko_supported_devices%2Fes.mw
+++ b/Openmoko_supported_devices%2Fes.mw
@@ -13,7 +13,7 @@ Las siguientes plataformas están soportadas en menor o mayor grado.
 
 * Motorola A780 [http://www.vanille-media.de/images/openmoko-on-a780.jpg OM2007.2]
 
-* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 OpenMoko 2007.2]
+* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 Openmoko 2007.2]
 
 * [http://en.wikipedia.org/wiki/HTC_Universal HTC Universal] el marcador de llamadas funciona [http://linuxtogo.org/~htcpxa/htcuniversal/index.html referencia:linuxtogo] [http://www.handhelds.org/moin/moin.cgi/UniversalStatus status:handhelds.org]
 
@@ -27,7 +27,7 @@ Las siguientes plataformas están soportadas en menor o mayor grado.
 
 == También ver ==
 
-* Ejecutar aplicaciones Openmoko en tu propio [[How_to_run_OpenMoko_Apps_on_PC | PC linux]]
+* Ejecutar aplicaciones Openmoko en tu propio [[How_to_run_Openmoko_Apps_on_PC | PC linux]]
 
 * [[Other OSes]]
 {{Languages|Openmoko-supported hardware}}
