Replacing 'OpenMoko' with 'Openmoko'

--- a/TeamANSOL.mw
+++ b/TeamANSOL.mw
@@ -8,7 +8,7 @@ Shipping address should be the main address listed at [http://ansol.org/contacto
 
 Please send us some proof of your purchase along with your address if applicable)
 
-The following people are ANSOL associates who expressed the wish to buy an OpenMoko:
+The following people are ANSOL associates who expressed the wish to buy an Openmoko:
 
 * [[User:Ruben|Ruben Mendes]]
 * [[User:RuiSeabra|Rui Seabra]]
