Replacing 'OpenMoko' with 'Openmoko'

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -6,7 +6,7 @@
  _| |_ _  ____| |__  _   _    
 (_   _) |/ ___)  _ \| | | |   A Python Applets Manager
   | |_| ( (___| | | | |_| |
-   \__)_|\____)_| |_|\__  |   For OpenMoko
+   \__)_|\____)_| |_|\__  |   For Openmoko
                     (____/ 
 </pre>
 
