Replacing 'OpenMoko' with 'Openmoko'

--- a/Today%2F2007.2.mw
+++ b/Today%2F2007.2.mw
@@ -2,7 +2,7 @@
 {{OM2007.2}}
 
 == Overview ==
-This article defines the second revision of the Today Application, an application designed for the OpenMoko platform.
+This article defines the second revision of the Today Application, an application designed for the Openmoko platform.
 
 The Today application is the entry point for the user. It therefore resides on the 'desktop' of the phone, and is used for the following:
 1) Quickly finding out the status of phone & calender related items.
