Replacing 'OpenMoko' with 'Openmoko'

--- a/Today%2F2007.2%2Fes.mw
+++ b/Today%2F2007.2%2Fes.mw
@@ -2,7 +2,7 @@
 {{OM2007.2}}
 
 == Introducción ==
-Este artículo corresponde a la segunda revisión de la aplicación Today, una aplicación diseñada para la plataforma OpenMoko.
+Este artículo corresponde a la segunda revisión de la aplicación Today, una aplicación diseñada para la plataforma Openmoko.
 
 La aplicación Today es el punto de entrada del usuario. Por lo tanto se encuentra en el 'Escritorio' del teléfono, y sus usos son:
 1) Acceso rápido al estado del teléfono y eventos del calendario.
