--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -230,7 +230,7 @@ Using the external toolchain is an easy way to build applications for your Neo. 
 * Using [[OpenEmbedded]] to customize your Openmoko distribution image
 
 =Advanced topics=
-==Building OpenMoko Kernel from git repo using Toolchain==
+==Building Openmoko Kernel from git repo using Toolchain==
 
  git clone git://git.openmoko.org/git/kernel.git linux-2.6
  cd linux-2.6
@@ -256,7 +256,7 @@ make sure to run om-conf again after this.
 
 Sooner or later you will want to compile an application that has dependencies which can't be fulfilled by the precompiled toolchain, e.g. some obscure libraries.
 
-In that case, feel free to request the inclusion of additional libraries into the next release of the OpenMoko toolchain. Until then, here is how you enhance your already installed toolchain. Say, we want to add the library called liburiparse:
+In that case, feel free to request the inclusion of additional libraries into the next release of the Openmoko toolchain. Until then, here is how you enhance your already installed toolchain. Say, we want to add the library called liburiparse:
 
  cd ~/source
  wget http://downloads.sourceforge.net/uriparser/uriparser-0.6.0.tar.bz2
