Replacing 'OpenMoko' with 'Openmoko'

--- a/Toolchain%2Fzh_cn.mw
+++ b/Toolchain%2Fzh_cn.mw
@@ -209,7 +209,7 @@ myapp_control的模板如下：
 ==向工具链中安装附加函数库==
 不久之后，你也许想要编译一个应用程序，这个应用程序依赖于生僻的函数库，而这些函数库并未由预编译的工具链提供。
 
-这种情况下，你可以请求将附加的函数库放入下一版本的OpenMoko工具链，而在那之前，你可以通过如下方式增强现有的工具链。这里演示了如何向工具链中加入一个名为liburiparse的函数库：
+这种情况下，你可以请求将附加的函数库放入下一版本的Openmoko工具链，而在那之前，你可以通过如下方式增强现有的工具链。这里演示了如何向工具链中加入一个名为liburiparse的函数库：
 
  cd ~/source
  wget http://downloads.sourceforge.net/uriparser/uriparser-0.6.0.tar.bz2
@@ -222,10 +222,10 @@ myapp_control的模板如下：
 # 上传你的应用程序源代码到公共区域
 # 提交一个[[BitBake]]包到[[OpenEmbedded]]，最好通过[http://bugs.openembedded.org OpenEmbedded bugtracker]
 
-您也可以参考 [[Customizing your OpenMoko distribution|定制化你的OpenMoko发行版]].
+您也可以参考 [[Customizing your Openmoko distribution|定制化你的Openmoko发行版]].
 
 ==问题排除==
 
-* 请使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel OpenMoko-Devel] 邮件列表来获得帮助。
+* 请使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel Openmoko-Devel] 邮件列表来获得帮助。
 
 [[Category:Application Developer/zh cn]]
