--- a/Toolchain%2Fzh_tw.mw
+++ b/Toolchain%2Fzh_tw.mw
@@ -221,10 +221,10 @@ myapp_control的範本：
 # 上傳你的程式原始碼到公共的區域
 # 送出[[BitBake]]到[[OpenEmbedded]]，最好的方法是透過[http://bugs.openembedded.org OpenEmbedded bugtracker]
 
-您也可以參考 [[Customizing your OpenMoko distribution|客製化你的Openmoko套件]].
+您也可以參考 [[Customizing your Openmoko distribution|客製化你的Openmoko套件]].
 
 ==問題排除==
 
-* 請使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel OpenMoko-Devel] 郵件清單來取得更多幫助。
+* 請使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel Openmoko-Devel] 郵件清單來取得更多幫助。
 
 [[Category:Application Developer/zh tw]]
