Replacing 'OpenMoko' with 'Openmoko'

--- a/Translation.mw
+++ b/Translation.mw
@@ -8,7 +8,7 @@ be English. If you have good English skills then you could contribute by correct
 the sources :)
 
 A good point to start would be to continuous translating of 
-http://en.wikipedia.org/wiki/OpenMoko into more languages on the other language sites of wikipedia.
+http://en.wikipedia.org/wiki/Openmoko into more languages on the other language sites of wikipedia.
 
 "...it is easy to join and spend some minutes for translating,
 and when someone finds some mistakes in any languages don't
