Replacing 'OpenMoko' with 'Openmoko'

--- a/Translation_HOWTO%2Far.mw
+++ b/Translation_HOWTO%2Far.mw
@@ -22,7 +22,7 @@
 == مكان مشترك لجهود التوطين ==
 '''من فضلك انضم لقائمة المجتمع البريدية خاليا.'''هناك بعض الحديث عمن إنشاء قائمة بريدية للترجمة[[Translation# Need for translation mailing list (and coordinators?)|هنا]][http://lists.openmoko.org/pipermail/community/2007-April/004973.html و هنا: OM-i18n-ml] لا تترد في الانضمام لهذه النقاشات. [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== قائمة بملفات PO المتعلقة ب‍ OpenMoko ==
+== قائمة بملفات PO المتعلقة ب‍ Openmoko ==
 أغلب التطبيقات في /home/moko/sources/svn/ و /home/moko/openmoko/trunk/src/target/OM-2007/applications/ لا تحتوي ملفات *.pot حاليا،  لكن بعضهم يحتوي ملفات *.po لبعض اللغات.
 
 {{Languages/ar|Translation_HOWTO}}
