Replacing 'OpenMoko' with 'Openmoko'

--- a/Translation_HOWTO%2Fbg.mw
+++ b/Translation_HOWTO%2Fbg.mw
@@ -21,7 +21,7 @@ Rule of thumb: По-добре е да има някакъв превод отк
 == Общо място за работата по локализацията ==
 '''моля присъединете се към списъка на общността (community ml) за сега.''' Има и малка беседа за създаване на преводачески пощенски списък [http://wiki.openmoko.org/wiki/Talk:Translation#Need_for_translation_mailing_list_.28and_coordinators.3F.29 тук] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html и тук: OM-i18n-ml] чувствайте се свободни да се присъедините и към двете дискусии. [[User:Cga|cga]] нед апр 28ми 20:48:35 CEST 2007)
 
-== Списък със свързаните с OpenMoko PO файлове ==
+== Списък със свързаните с Openmoko PO файлове ==
 Повечето приложения в /home/moko/sources/svn/ и /home/moko/openmoko/trunk/src/target/OM-2007/applications/ за момента нямат *.pot файлове, но някои от тях имат *.po файлове за някои езици
 
 {{Languages|Translation_HOWTO}}
