--- a/Translation_HOWTO%2Fde.mw
+++ b/Translation_HOWTO%2Fde.mw
@@ -19,7 +19,7 @@ Die meisten Texteditoren machens aber auch (vim, emax, ed ...)
 == Common space for localisation effort ==
 '''please join the community ml for now.''' there's also some talking about creating a translators ml [http://wiki.openmoko.org/wiki/Talk:Translation#Need_for_translation_mailing_list_.28and_coordinators.3F.29 here] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html and here: OM-i18n-ml] feel free to join both discussions. [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== List of OpenMoko related PO's==
+== List of Openmoko related PO's==
 Die meisten Applikationen in /home/moko/sources/svn/ und /home/moko/openmoko/trunk/src/target/OM-2007/applications/ haben keine *.pot-Dateien fürs Erste, aber einige von denen haben *.po-Dateien für einige von den Sprachen.
 
 {{Languages|Translation_HOWTO}}
