Replacing 'OpenMoko' with 'Openmoko'

--- a/Translation_HOWTO%2Fit.mw
+++ b/Translation_HOWTO%2Fit.mw
@@ -34,7 +34,7 @@ La maggior parte degli editor di testo hanno a disposizione una modalità per la
 
 C'è una discussione riguardo la creazione di una mailing list specifica per i traduttori [http://wiki.openmoko.org/wiki/Talk:Translation#Need_for_translation_mailing_list_.28and_coordinators.3F.29 qui] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html e qui: OM-i18n-ml]. Partecipate alla discussione! [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== Elenco dei file PO di OpenMoko ==
+== Elenco dei file PO di Openmoko ==
 
 Molte delle applicazioni in /home/moko/sources/svn e /home/moko/openmoko/trunk/src/target/OM-2007/applications/ non hanno un file "*.pot" al momento, ma alcune dispongono di alcuni file "*.po".
 
